[package]
name = "loc-server"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.15"
tokio = { version = "1.0", features = ["full"] }
log = "0.4.14"
env_logger = "0.9.0"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
thiserror = "1.0.30"
tower-http = { version = "0.2.3", features = ["cors"]}
http = "0.2.6"
tempfile = "3.3.0"
tokei = "12.1.2"
reqwest = "0.11.11"

[profile.release]
strip = true
